# TattleTale

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  index.html  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  default-issue.md  paper-reading.md  thesis-section.md
.github/workflows/: cmake.yml  doxygen.yml
html/: absoluteinterestcuration_8hpp_source.html  action_8hpp_source.html  actor_8hpp_source.html  annotated.html  catcuration_8hpp_source.html  chronicle_8hpp_source.html  classes.html  classtale_1_1_action-members.html  classtale_1_1_action.html  classtale_1_1_actor-members.html  classtale_1_1_actor.html  classtale_1_1_chronicle-members.html  classtale_1_1_chronicle.html  classtale_1_1_course-members.html  classtale_1_1_course.html  classtale_1_1_emotion-members.html  classtale_1_1_emotion.html  classtale_1_1_goal-members.html  classtale_1_1_goal.html  classtale_1_1_interaction-members.html  classtale_1_1_interaction.html  classtale_1_1_interaction_store-members.html  classtale_1_1_interaction_store.html  classtale_1_1_kernel-members.html  classtale_1_1_kernel.html  classtale_1_1_random-members.html  classtale_1_1_random.html  classtale_1_1_relationship-members.html  classtale_1_1_relationship.html  classtale_1_1_resource-members.html  classtale_1_1_resource.html  classtale_1_1_school-members.html  classtale_1_1_school.html  classtale_1_1_trait-members.html  classtale_1_1_trait.html  classtattletale_1_1_absolute_interest_curation-members.html  classtattletale_1_1_absolute_interest_curation.html  classtattletale_1_1_actor-members.html  classtattletale_1_1_actor.html  classtattletale_1_1_cat_curation-members.html  (+158 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  files_0.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  (+34 more)
latex/: absoluteinterestcuration_8hpp_source.tex  action_8hpp_source.tex  actor_8hpp_source.tex  annotated.tex  catcuration_8hpp_source.tex  chronicle_8hpp_source.tex  classtale_1_1_action.eps  classtale_1_1_action.tex  classtale_1_1_actor.eps  classtale_1_1_actor.tex  classtale_1_1_chronicle.tex  classtale_1_1_course.tex  classtale_1_1_emotion.eps  classtale_1_1_emotion.tex  classtale_1_1_goal.eps  classtale_1_1_goal.tex  classtale_1_1_interaction.eps  classtale_1_1_interaction.tex  classtale_1_1_interaction_store.tex  classtale_1_1_kernel.eps  classtale_1_1_kernel.tex  classtale_1_1_random.tex  classtale_1_1_relationship.eps  classtale_1_1_relationship.tex  classtale_1_1_resource.eps  classtale_1_1_resource.tex  classtale_1_1_school.tex  classtale_1_1_trait.eps  classtale_1_1_trait.tex  classtattletale_1_1_absolute_interest_curation.eps  classtattletale_1_1_absolute_interest_curation.tex  classtattletale_1_1_actor.eps  classtattletale_1_1_actor.tex  classtattletale_1_1_cat_curation.eps  classtattletale_1_1_cat_curation.tex  classtattletale_1_1_chronicle.tex  classtattletale_1_1_course.tex  classtattletale_1_1_curation.eps  classtattletale_1_1_curation.tex  classtattletale_1_1_curator.tex  (+95 more)
source/: CMakeLists.txt  Example.cpp  Example.hpp  main.cpp
source/extradocs/: mainpage.md
source/resources/: courses.txt  credits.txt  interactioncatalogue.json
source/shared/: actor.cpp  actor.hpp  chronicle.cpp  chronicle.hpp  random.cpp  random.hpp  setting.hpp  tattletalecore.hpp
source/shared/kernels/: goal.cpp  goal.hpp  kernel.cpp  kernel.hpp  trait.cpp  trait.hpp
source/shared/kernels/interactions/: interaction.cpp  interaction.hpp  interactioncontexttype.hpp  interactionprototype.hpp  interactionrequirement.hpp  interactiontendency.hpp
source/shared/kernels/resourcekernels/: emotion.cpp  emotion.hpp  relationship.cpp  relationship.hpp  resource.cpp  resource.hpp
source/tale/: actor.cpp  actor.hpp  course.cpp  course.hpp  interactionstore.cpp  interactionstore.hpp  kernel.cpp  kernel.hpp  school.cpp  school.hpp  setting.hpp  tale.cpp  tale.hpp  talecore.hpp
source/tale/globals/: chronicle.cpp  chronicle.hpp  interactionstore.cpp  interactionstore.hpp  random.cpp  random.hpp
source/tale/kernels/: action.cpp  action.hpp  emotion.cpp  emotion.hpp  goal.cpp  goal.hpp  interaction.cpp  interaction.hpp  kernel.cpp  kernel.hpp  relationship.cpp  relationship.hpp  resource.cpp  resource.hpp  trait.cpp  trait.hpp
source/tale/kernels/interactions/: interaction.cpp  interaction.hpp  interactioncontexttype.hpp  interactionprototype.hpp  interactionrequirement.hpp  interactiontendency.hpp  requirement.hpp
source/tale/kernels/resourcekernels/: emotion.cpp  emotion.hpp  relationship.cpp  relationship.hpp  resource.cpp  resource.hpp
source/tale/resources/: interactioncatalogue.json  interactionprototypes.json
source/tattle/: curator.cpp  curator.hpp  tattle.cpp  tattle.hpp
source/tattle/curations/: absoluteinterestcuration.cpp  absoluteinterestcuration.hpp  catcuration.cpp  catcuration.hpp  curation.hpp  randomcuration.cpp  randomcuration.hpp  raritycuration.cpp  raritycuration.hpp  tagcuration.cpp  tagcuration.hpp
test/: CMakeLists.txt  Example-test.cpp  tale-test.cpp  tattle-test.cpp  test.cpp
